Cloud Deployment /deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-apple-api-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-apple-api
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-apple-api
    spec:
      containers:
      - name: spring-apple-api
        image: <name>/spring-starbucks-api:v2.0 
        ports:
        - containerPort: 8080
