Cloud Deployment /apple-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-apple-api-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-apple-api
  replicas: 2 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-apple-api
    spec:
      containers:
      - env:
        - name: MYSQL_HOST
          value: mysql-service
        image: mk2017/spring-apple-api:latest
        name: spring-apple-api
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-apple-api-service
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080 
  selector:
    name: spring-apple-api
