Cloud Deployment /apple-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-apple-api
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /user
        backend:
          serviceName: spring-apple-api-service
          servicePort: 80
      - path: /products
        backend:
          serviceName: spring-apple-api-service
          servicePort: 80
